# qbt-lite

./: .gitignore  CHANGELOG.md  PLAN_v0.3.0.md  README.md  README_v0.2.0.md  README_v0.3.0.md  README_v0.3.1.md  fetch_aapl.py  mkdocs.yml  pyproject.toml  streamlit_app.py
.github/workflows/: ci.yml  deploy-docs.yml
architecture/: index.html
docs/: architecture.md  cli.md  data.md  faq.md  index.md  installation.md  reporting.md  roadmap.md  strategies.md  streamlit.md  usage.md
examples/: run_event_driven_demo.py  run_momentum_example.py  run_multi_momentum.py  run_sma_example.py  run_sma_sensitivity.py
examples/configs/: multi_momentum.yml
examples/data_sample/: AAA.csv  AAPL.csv  BBB.csv  CCC.csv  MOCK.csv  MOCK_STOCK_MOM.csv
faq/: index.html
qbt/analytics/: metrics_ext.py
qbt/core/: event_engine.py  metrics.py
qbt/report/: report.py
reporting/: index.html
reports/: aapl_mom_metrics.csv  aapl_mom_metrics.md  bbands_demo_metrics.csv  bbands_demo_metrics.md  cli_mom_metrics.csv  cli_mom_metrics.md  event_driven_demo_metrics.csv  event_driven_demo_metrics.md  macd_demo_metrics.csv  macd_demo_metrics.md  multi_momentum_metrics.csv  multi_momentum_metrics.md  pytest_demo_metrics.csv  pytest_demo_metrics.md  rsi_demo_metrics.csv  rsi_demo_metrics.md  streamlit_run_metrics.csv  streamlit_run_metrics.md  topn_demo_metrics.csv  topn_demo_metrics.md
roadmap/: index.html
site/: 404.html  index.html
site/cli/: index.html
site/data/: index.html
site/installation/: index.html
site/usage/: index.html
streamlit/: index.html
tests/: test_metrics.py
(+2 files in other folders)
